<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submission"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/tool_bar"
        app:layout_constraintBottom_toTopOf="@+id/appCompatImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="158dp"
        android:layout_height="43dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:hint="@string/edit_text1_hint"
        android:inputType="textPersonName"
        android:paddingLeft="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:hint="@string/edit_text2_hint"
        android:inputType="textPersonName"
        android:paddingLeft="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText1"
        app:layout_constraintTop_toTopOf="@+id/appCompatImageView"
        app:layout_constraintVertical_bias="0.18" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:hint="@string/edit_text3_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.45" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/textview_background"
        android:ems="10"
        android:hint="@string/edit_text4_hint"
        android:inputType="textPersonName"
        android:paddingLeft="4dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/button"
        android:layout_width="134dp"
        android:layout_height="31dp"
        android:background="@drawable/button_background"
        android:text="@string/submit_button"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

</androidx.constraintlayout.widget.ConstraintLayout>
